# job-hunter

.claude/: settings.local.json
resume-job-finder/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
resume-job-finder/data/companies/: in.json  us.json
resume-job-finder/src/resume_job_finder/: __init__.py  analyzer.py  cli.py  companies.py  config.py  extractor.py  llm.py  matcher.py  models.py  render.py  report.py  resume_parser.py  search.py
