[project]
name = "resume-job-finder"
version = "0.1.0"
description = "Analyze a resume and find matching openings on top companies' own career portals."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "tavily-python>=0.5.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.scripts]
rjf = "resume_job_finder.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resume_job_finder = ["../../data/companies/*.json"]
